@@ -73,6 +73,7 @@ Improvements:
     * all efl object-freeing functions now take NULL without crashing or erroring
     * use Eina_File in webp, gif, tiff, png and eet loader
     * Eina.h includes eina_alloca.h/alloca.h to define alloca()
+    * Improved eina share del speed.
 
 Fixes:
     * Fix PPC (big endian) image codec bug.
